--- a/app/views/admins/_top.html.erb
+++ b/app/views/admins/_top.html.erb
@@ -30,7 +30,17 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active" style="font-size:1.2rem">
-         <%= link_to ' Home', admins_user_path(), class:"nav-link fa fa-home fa-fw" %>
+         <%= link_to ' Home', admins_index_path(), class:"nav-link fa fa-home fa-fw" %>
+      </li>
+      
+      <li class="nav-item active"style="font-size:1.2rem">
+         <%= link_to ' List Admin', admins_admin_path(), class:"nav-link fa fa-user-o fa-fw" %>
+      </li>
+      <li class="nav-item active"style="font-size:1.2rem">
+         <%= link_to ' List User', admins_user_path(), class:"nav-link fa fa-user-circle fa-fw" %>
+      </li>
+      <li class="nav-item active" style="font-size:1.2rem">
+          <%= link_to ' Table Tasks', admins_table_path(), class:"nav-link fa fa-fw fa-table" %>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -48,17 +58,8 @@
           <a class="dropdown-item" href="blank.html">Blank Page</a>
         </div>
       </li>
-      <li class="nav-item active"style="font-size:1.2rem">
-         <%= link_to ' List Admin', admins_admin_path(), class:"nav-link fa fa-user-o fa-fw" %>
-      </li>
-      <li class="nav-item active"style="font-size:1.2rem">
-         <%= link_to ' List User', admins_user_path(), class:"nav-link fa fa-user-circle fa-fw" %>
-      </li>
-      <li class="nav-item active" style="font-size:1.2rem">
-          <%= link_to ' Table Tasks', admins_table_path(), class:"nav-link fa fa-fw fa-table" %>
-      </li>
     </ul>
 
     <div id="content-wrapper">
 
-      <div class="container-fluid">
+      <div class="  ">
