--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 <div class="container pt-4">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 m-auto">
@@ -26,43 +19,42 @@
 			  </a>
 			</div>
 			<center class="pt-2">
-			<b><%= @task.taskname %></b>
+			<h1><%= @task.taskname %></h1>
 			<br/>
-			<%= @task.content %>
+			<h2><%= @task.content %></h2>	
 			<br/>	<br/>
-			<p><i class="fa fa-tags" aria-hidden="true"></i> Tag:</p>
+			<h3 class="d-inline"><i class="fa fa-tags" aria-hidden="true"></i> Tag:</h3>
 			<% if @task.users.any? %>
 			<% @task.users.each do |user| %>
-			<%= link_to user[:username], user_path(user) %> ·
+			<h3 class="d-inline"><%= link_to user[:username], user_path(user) %> · </h3>
 			<% end %>
 			<% end %>
 
-			<br/>
+			<br/><br/>
 			<% if ( current_user.admin?) %>
 			<%= link_to "", edit_task_path, class: "btn btn-lg btn-primary fa fa-pencil" %>
 			<%= link_to "", task_path(@task), method: :delete,
 			data: { confirm: "Are you sure you want to delete the task?"}, 														class: "btn btn-lg btn-danger fa fa-trash" %>
 			<%= link_to "", tasks_path, class: "btn btn-lg btn-success fa fa-arrow-circle-left" %>
 			<% end %>
-			<br/>
 			<% if @task.status == "notstarted" %>
-									<% if  @task.users.find_by(id: current_user.id) || @task.users.count == 0 %>
-									 <%= link_to "", change_status_path(:task => @task, :status => "inprogress"), method: :put, data: {dismiss: "alert", confirm: "Are you sure to receive this task?"},class: "btn btn-warning fa fa-thumb-tack"
-		    						 %>
-		    						 <% else %>
-		    						 <button type="button" class="btn btn-warning" disabled><span class="fa fa-thumb-tack"></span>
-										</button>
-		    						 <% end %>
-								<% else %>
-									<% if @task.status == "inprogress" %>
-									<%= link_to "", change_status_path(:task => @task, :status => "done"), method: :put, data: {dismiss: "alert", confirm: "Do you complete your task?"},class: "btn btn-warning fa fa-check-circle-o"
-		    						 %>
-									<% else %>
-										<button type="button" class="btn btn-warning" disabled><span class="fa fa-thumb-tack"></span>
-										</button>
-									<% end %>
-								<% end %>
-			
+				<% if  @task.users.find_by(id: current_user.id) || @task.users.count == 0 %>
+				 <%= link_to "", change_status_path(:task => @task, :status => "inprogress"), method: :put, data: {dismiss: "alert", confirm: "Are you sure to receive this task?"},class: "btn btn-warning fa fa-thumb-tack"
+				 %>
+				 <% else %>
+				 <button type="button" class="btn btn-lg btn-warning" disabled><span class="fa fa-thumb-tack"></span>
+					</button>
+				 <% end %>
+			<% else %>
+				<% if @task.status == "inprogress" %>
+				<%= link_to "", change_status_path(:task => @task, :status => "done"), method: :put, data: {dismiss: "alert", confirm: "Do you complete your task?"},class: "btn btn-warning fa fa-check-circle-o"
+				 %>
+				<% else %>
+					<button type="button" class="btn btn-lg btn-warning" disabled><span class="fa fa-thumb-tack"></span>
+					</button>
+				<% end %>
+			<% end %>
+
 			</center>
 		</div>
 	</div>
