set avatar default

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,7 +24,7 @@
            <% x = @user.avatar %>
         <% end %>
        <% if @user.avatar.attached? == false %>
-           <% x = "" %>
+           <% x = "avatar-blank.jpg" %>
         <% end %>
         <label for="file-input">
           <div class="changeavt">
