--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
-<div class="container mt-5 pt-3">    
+<div class="container mt-5 pt-3" ">    
     <div class="row">
-        <div class="card">
-     	    <div class="card-header">  <h4 >User Profile</h4></div>
-            <div class="card-body">
+        <div class="col-12">
+     	    <div class="" style="background-color:rgba(0, 0, 0, 0.03),padding: 10px;">  <h2>User Profile</h2></div>
+            <div class="">
             	<div class="row">
-	    		    <div class="col-md-4 col-xs-12 col-sm-6 col-lg-4">
-	     			     <%= image_tag @user.avatar.attached? == false ? " ": @user.avatar,class: "rounded-circle img-thumbnail" %>
+	    		    <div class="col-4">
+	     			   <div style="max-width: 300px;">  <%= image_tag @user.avatar.attached? == false ? "avatar-blank.jpg": @user.avatar,class: "rounded-circle img-thumbnail" %> </div>
 	 				</div>
-			   	    <div class="col-md-8 col-xs-12 col-sm-6 col-lg-8" >
+			   	    <div class="col-8" >
 			            <div class="container" >
 			         	    <h2><%= @user.username %></h2>
 			           	    <p>an   <b> Rails Web Developer</b></p>
