multi search in list tasks

--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -26,3 +26,7 @@ img.imgcomment.align-self-start.mr-3 {
      width: 80px;
     height: 80px;
 }
+.search-form {
+    padding: 60px 329px 14px 396px;
+    /* margin-top: 2px; */
+}
